--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ node_js:
   - v0.12
   - v4.2.4
 before_script:
-  - curl -sSkL https://git.io/perl-install | bash -s ./perl
+  - wget https://github.com/shoichikaji/relocatable-perl/releases/download/5.22.1.0/perl-linux-2level.tar.gz
+  - tar xzf perl-linux-2level.tar.gz
+  - mv perl-linux-2level $PWD/perl
   - ./perl/bin/cpanm Text::Xslate
   - export PATH=$PATH:$PWD/perl/bin
+  - export PERL5LIB=$PERL5LIB:$PWD/perl/lib/5.22.1
