--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_script:
   - curl -sSkL https://git.io/perl-install | bash -s ./perl
   - ./perl/bin/cpanm Text::Xslate
   - export PATH=$PATH:$PWD/perl/bin
-  - export PERL5LIB=$PERL5LIB:$PWD/perl/lib/5.22.1
+  - export PERL5LIB=$PERL5LIB:$PWD/perl/lib/5.22.1/x86_64-linux
