--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - v0.12
   - v4.2.4
 before_script:
-  - curl -sSkL https://git.io/perl-install | bash -s ./perl
-  - ./perl/bin/cpanm Text::Xslate
-  - export PATH=$PATH:$PWD/perl/bin
-  - export PERL5LIB=$PERL5LIB:$PWD/perl/lib/5.22.1/x86_64-linux
+  - curl -sSkL https://git.io/perl-install | bash -s $PWD/perl
+  - export PATH=$PWD/perl/bin:$PATH
+  - cpanm Text::Xslate
+  - perldoc Text::Xslate
