fix(travis-ci): add options `--notest` on cpanm

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ node_js:
 before_script:
   - curl -sSkL https://git.io/perl-install | bash -s $PWD/perl
   - export PATH=$PWD/perl/bin:$PATH
-  - cpanm Text::Xslate
+  - cpanm --notest Text::Xslate
