--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.2.0",
     "power-assert": "^1.2.0"
