--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "index.js",
   "scripts": {
+    "bump": "mversion $1 -m '%s'",
     "start": "gulp watch",
     "test": "gulp test"
   },
@@ -16,10 +17,12 @@
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
+    "conventional-changelog": "^0.5.3",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.2.0",
+    "mversion": "^1.10.1",
     "power-assert": "^1.2.0"
   },
   "directories": {
